Se crearon los servicios de eventos de calendario en el swagger, y los servicios para el club y team que obtienen los eventos de calendario para asociados a cada uno
